// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorsDisplay should display a graphql error with extension when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.FORBIDDEN
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a graphql error with extension when errors are present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.FORBIDDEN
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a graphql error without extension when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          simple graphql error
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a graphql error without extension when errors are present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          simple graphql error
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a network error when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          Forbidden
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a network error when errors are present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          Forbidden
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a network error with 1 error when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          fake.path fake message
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display a network error with multiple errors when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          fake.path fake message
        </p>
      </li>
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          fake.path2 fake message 2
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display classic error when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          error1
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display classic error when errors are present (1 item) 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          error1
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display classic error when errors are present (2 items) 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          error1
        </p>
      </li>
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          error2
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display two graphql error with extension when error is present 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.FORBIDDEN
        </p>
      </li>
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.INTERNAL_SERVER_ERROR
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display two graphql error with extension when errors are present (1 item with 2) 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.FORBIDDEN
        </p>
      </li>
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.INTERNAL_SERVER_ERROR
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should display two graphql error with extension when errors are present (2 items) 1`] = `
<div>
  <div
    class="MuiBox-root css-z0zjqa"
  >
    <p
      class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
    >
      common.errors
      :
    </p>
    <ul
      class="MuiBox-root css-0"
    >
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.FORBIDDEN
        </p>
      </li>
      <li
        class="MuiBox-root css-0"
      >
        <p
          class="MuiTypography-root MuiTypography-body1 css-1nkhxq8-MuiTypography-root"
        >
          common.errorCode.INTERNAL_SERVER_ERROR
        </p>
      </li>
    </ul>
  </div>
</div>
`;

exports[`ErrorsDisplay should return null when no error or errors are present 1`] = `<div />`;
